# llamastyle

./: 4.5-info.ini  ARCHIVE_README.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION.md  PUBLISH.md  QUICK_START.md  README.md  __init__.py  app.py  cli.py  config.yaml  download_samples.py  example-script.sh  llamastyles-cli  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_llamastyles.py  setup.py  validate_imports.py  verify_installation.py
docs/: api.md  index.html  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html
llamastyle/: __init__.py  client.py
tests/: test_client.py
